<resources>
    <string name="app_name">Pimp My Z1</string>
    <string name="presentation">Presentation</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="background_window">#FFE5E5E5</string>
    <string name="holoblue">#33b6ea</string>
    <string name="play_blue">#FF3F9FE0</string>
    <string name="play_green">#FF96AA39</string>
    <string name="play_orange">#FFF4842D</string>
    <string name="play_red">#FFC74B46</string>
    <string name="play_gray">#FF666666</string>
    <string name="drawer_website">Website</string>
    <string name="drawer_xda">XDA Thread</string>
    <string name="drawer_twitter">Follow Me</string>
    <string name="drawer_gplus">Add Me To Your Circles</string>
    <string name="drawer_facebook">Become a Fan</string>
    <string name="drawer_donate">Donate With PayPal</string>
    <string name="card_title">Card Title</string>
    <string name="lorem_ipsum">umque ibi diu moratur commeatus opperiens, quorum translationem ex Aquitania verni imbres solito crebriores prohibebant auctique torrentes, Herculanus advenit protector domesticus</string>
    <string name="card_icon_accessibility">Card Icon</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_desc">Welcome to Pimp My Z1, the all-in-one app your Xperia Z1 was yearning for.</string>
    <string name="help_center">Help Center</string>
    <string name="help_center_introduction">Learn everything about every single feature of Pimp My Z1, and become a lvl.99 Android nerd along the way ;)</string>
    <string name="menu_link_seekbars">Link Left &amp; Right</string>
    <string name="menu_apply">Apply</string>
    <string name="kernel_cpu_control">CPU Control</string>
    <string name="kernel_cpu_control_desc">This tool allows you to set your CPU min/max frequencies, governors, I/O schedulers, TCP congestion algorithms and a lot more.</string>
    <string name="kernel_color">#1abc9c</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="kernel_gpu_control">GPU Control</string>
    <string name="kernel_gpu_control_desc">This tool allows you to control your GPU\'s minimum &amp; maximum frequencies, and overlock it if supported by your kernel.</string>
    <string name="kernel_power_management">Power Management</string>
    <string name="kernel_power_management_desc">This section allows you to control various power management features of your kernel (if implemented)</string>
    <string name="kernel_io_tweaks">I/O Tweaks</string>
    <string name="kernel_io_tweaks_desc">This section contains various kernel-level I/O tweaks, such as your I/O Schedulers settings, dynamic file sync, I/O readahead, etc…</string>
    <string name="unsupported">Unsupported</string>
    <string name="sound_control_unsupported">Your kernel does not seem to implement Faux123\'s Sound Control driver, or the version it implements is not supported, sorry :(</string>
    <string name="sound_control_color">#e67e22</string>
    <string name="sc_headphone_digital_gain">Headphones Digital Gain</string>
    <string name="sc_headphone_digital_gain_desc">Controls the audio volume gain for the headphone digital output</string>
    <string name="sc_headphone_analog_gain">Headphone Analog Gain</string>
    <string name="sc_headphone_analog_gain_desc">Controls the audio volume gain for the headphone analog output\n(PowerAmp gain)</string>
    <string name="sc_speaker_gain">Speaker Gain</string>
    <string name="sc_speaker_gain_desc">Controls the audio volume gain for the speaker analog output</string>
    <string name="sc_mic_gain">Mic Gain</string>
    <string name="sc_mic_gain_desc">Controls the audio volume gain for the microphone input</string>
    <string name="sc_cam_mic_gain">Camera Mic Gain</string>
    <string name="sc_cam_mic_gain_desc">Controls the audio volume gain for the camera microphone input</string>
    <string name="coming_soon_desc">Sorry, this section isn\'t available at the moment</string>
    <string name="pen_mode">Pen Mode</string>
    <string name="pen_mode_desc">When Pen Mode is enabled, you will be able to use any pen or non-plastic object as a stylus on your Sony Xperia Z1 touchscreen.</string>
    <string name="touch_screen_color">#2980b9</string>
    <string name="glove_mode">Glove Mode</string>
    <string name="glove_mode_desc">With Glove Mode enabled, you will be able to use the touchscreen on your Xperia Z1 even while wearing gloves.</string>
    <string name="kernel_control">Kernel Control</string>
    <string name="kernel_control_desc">This section allows you to tweak your kernel features to your liking, from CPU &amp; GPU overclocking to governors, I/O schedulers, TCP congestion algorithms and much more…</string>
    <string name="sound_control">Sound Control</string>
    <string name="sound_control_desc">Tweak the volume of your headphones output, speaker, camera mic &amp; sound recording mic if you are using a kernel which implements Faux123\'s Sound Control.</string>
    <string name="touch_screen">Touch Screen</string>
    <string name="touch_screen_desc">Control your Xperia Z1 touch-screen, from adding support for any pen or non-plastic object to tweaking the smallest parameters like touch pressure, target size, max speed, drag range, etc…</string>
    <string name="help_center_color">#34495e</string>
    <string name="dynamic_fsync">Dynamic File Sync</string>
    <string name="dynamic_fsync_desc">When Dynamic Fsync is enabled, file sync will be delayed until the screen is turned off, at which point all pending write operations are synced, allowing for better performance while using the device.</string>
    <string name="dynamic_fsync_version">Your kernel\'s Dynamic Fsync version is: \'</string>
    <string name="sched_mc">Multi-Core Power Savings</string>
    <string name="sched_mc_desc">With Multi-Core Power Savings enabled, the CPU will try to use as few cores as possible by using one core until it is maxed-out. This allows to save quite a lot of battery.\nTwo levels of aggressiveness are available.</string>
    <string name="intelli_plug">Intelli Plug</string>
    <string name="intelli_plug_desc">Intelli_plug is a hotplug driver created by Faux123 as an open-source replacement for Qualcomm\'s closed-source msm_mpdecision driver. As such, it is more customizable and has a different and possibly more optimized strategy.</string>
    <string name="intelli_plug_eco">Intelli Plug Eco Mode</string>
    <string name="intelli_plug_eco_desc">Intelli_plug\'s eco mode is a hotplug strategy optimized to keep 2 cores offline as often as possible, thus saving a great deal of battery.</string>
    <string name="power_suspend">Power Suspend</string>
    <string name="power_suspend_desc">Power Suspend is an open-source kernel power management driver created by Faux123, it replaces the now aging early_suspend driver.\nPower Suspend allows for better battery savings while the screen is off.</string>
    <string name="disabled">Disabled</string>
    <string name="moderate">Moderate</string>
    <string name="aggressive">Aggressive</string>
    <string name="refresh">Refresh</string>
    <string name="io_scheduler">I/O Scheduler</string>
    <string name="tcp_congestion">TCP Congestion Algorithm</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="set_on_boot_summary_off">Your changes will be lost after a reboot</string>
    <string name="set_on_boot_summary_on">Your changes will be applied after each reboot</string>
    <string name="governor_core4">Governor (Core 4)</string>
    <string name="governor_core3">Governor (Core 3)</string>
    <string name="governor_core2">Governor (Core 2)</string>
    <string name="governor_core1">Governor (Core 1)</string>
    <string name="minimum">Minimum:\u0020</string>
    <string name="maximum">Maximum:\u0020</string>
    <string name="current_freq">Current frequency</string>
    <string name="left">Left:\u0020</string>
    <string name="sec">sec.</string>
    <string name="right">Right:\u0020</string>
    <string name="gpu_governor">GPU Governor</string>
    <string name="kernel_misc">Miscellaneous</string>
    <string name="kernel_misc_desc">Control some miscellaneous kernel features, such as VM parameters, Kernel Same-page Merging and more</string>
    <string name="ksm_header">KERNEL SAME-PAGE MERGING</string>
    <string name="ksm">KSM</string>
    <string name="ksm_desc">Enabling Kernel Same-page Merging reduces memory usage and increases performance by allowing the system to scan for duplicate memory pages, merge them and allow those pages to be shared amongst different processes</string>
    <string name="ksm_unsupported">Sorry, your kernel does not seem to support KSM.</string>
    <string name="ksm_pages_to_scan">Pages To Scan</string>
    <string name="ksm_pages_to_scan_desc">Amount of pages KSM should scan at each run</string>
    <string name="ksm_timer">KSM Timer</string>
    <string name="ksm_timer_desc">Defines the interval of time (in milliseconds) at which KSM will scan for mergeable memory pages</string>
    <string name="snake_charmer">Snake Charmer</string>
    <string name="snake_charmer_desc">Snake Charmer by faux123 allows to limit the maximum CPU frequency for all cores</string>
    <string name="dyn_fsync_unsupported">Sorry, your kernel does not seem to support Dynamic Fsync.</string>
    <string name="io_sched_emmc">I/O Scheduler (eMMC)</string>
    <string name="io_sched_emmc_desc">Defines the I/O Scheduler to use for the internal storage</string>
    <string name="io_sched_sd">I/O Scheduler (SD-Card)</string>
    <string name="io_sched_sd_desc">Defines the I/O Scheduler to use for the external storage/SD-Card</string>
    <string name="emmc_readahead">Readahead (eMMC)</string>
    <string name="emmc_readahead_desc">Specifies the amount of data in kilobytes that are read and cached ahead of time by the I/O Scheduler for the internal storage</string>
    <string name="sdcard_readahead">Readahead (SD-Card)</string>
    <string name="sdcard_readahead_desc">Specifies the amount of data in kilobytes that are read and cached ahead of time by the I/O Scheduler for the external SD-Card</string>
    <string name="emmc_entropy_contrib">Entropy Contribution (eMMC)</string>
    <string name="entropy_contrib_desc">Flash devices have few randomness and as such they are a very poor source of entropy, disable for better performance.</string>
    <string name="sdcard_entropy_contrib">Entropy Contribution (SD-Card)</string>
    <string name="profiles">Profiles</string>
    <string name="per_core_governors">Per-Core Governor Control</string>
    <string name="per_core_governors_text">Enable to control each core\'s governor independently, disable to use the same governor for all cores.</string>
    <string name="general_governor">Governor (All Cores)</string>
    <string name="memory_management_text">Control the memory management features of your kernel, such as Kernel Same-page Merging, zRam, Swap, VM parameters and more…</string>
    <string name="memory_management">Memory Management</string>
    <string name="warning_vibrator">Values higher than %1$d are not recommended</string>
    <string name="intelliplug_eco_cores">Intelliplug Eco Cores Enabled</string>
    <string name="intelliplug_eco_cores_text">Defines the maximum amount of CPU cores to enable when Intelli Plug\'s eco mode is active.</string>
    <string name="alucard_cores">Alucard Online Cores</string>
    <string name="alucard_cores_text">Defines the max amount of online CPU cores when using Alucard Hotplug</string>
    <string name="hotplug_driver">Hotplug Driver</string>
    <string name="hotplug_driver_text">Select which hotplug driver to use. Hotplug drivers define the strategy to use for toggling CPU cores on/off depending on the CPU load.</string>
</resources>